--- a/mpp/TODO
+++ b/mpp/TODO
@@ -5,41 +5,45 @@ TO DO
 Although this is the TODO list, much of what is on is targeted for a specific
 release version. It should be seen as a wish list in regards to the version
 number, but also describe the priority of the TODO list at the same time.
+
+2009-06-30
+Several of these items will be resolved as the MPP Web Service evolves. These
+items are marked with a [Wo] if being addressed, and [Wx] if completed.
 --
 
 [revision 2.00.000]
 -----CONFIGURATION-----
-[ ] Build a pool configuration based on a Virtual Server defined in the
+[?] Build a pool configuration based on a Virtual Server defined in the
     LVS/Piranha configuration file.
 -----POOL-GLOBAL-----
-[ ] Make Pollers aware of each other so that they can do the following:
---- [ ] Inherit the configuration of another poller sharing in a global
+[Wo] Make Pollers aware of each other so that they can do the following:
+--- [Wo] Inherit the configuration of another poller sharing in a global
         failover or cluster. Read Poller XML config via HTTP request.
---- [ ] Replicate pool stats from a 'master' poller to a 'slave' poller. And
+--- [Wo] Replicate pool stats from a 'master' poller to a 'slave' poller. And
         have slave poller act as STANDBY. (Similar to a MySQL master/slave
         replication and failover)
 --- [ ] Create internal pool of Pollers, so that there can be a more
         intelligent redundancy using the pool::failover::logic mechanism.
 -----GUI-----
-[ ] Add more features to the Web-based GUI
+[Wo] Add more features to the Web-based GUI
 
 [revision 1.20.000]
 -----GUI-----
-[ ] Create *simple* web-based Graphical User Interface to configuring and
+[Wo] Create *simple* web-based Graphical User Interface to configuring and
     managing the Poller and cached pools.
 -----MANAGEMENT-----
 [ ] Allow more micro management of objects in the pools, like the following:
---- [ ] Allow adding/renaming/deleting single servers from pools with ease
+--- [Wo] Allow adding/renaming/deleting single servers from pools with ease
 --- [ ] Allow creation of new servers/pools based on the configurations of
         existing servers/pools in the cache. (i.e. use same checkpoints..)
 
 [revision 1.10.000]
 -----GUI-----
-[ ] Add a shell to the poller for managing the cache and polling (like SQL).
+[?] Add a shell to the poller for managing the cache and polling (like SQL).
 
 [revision 1.03.000]
 -----REPORTING-----
-[ ] Generate output optionally in XML upon request, using a 'xml' option flag,
+[Wx] Generate output optionally in XML upon request, using a 'xml' option flag,
     or 'format=xml'. Default output should still remain the human readable
     plain-text format that has already been used. Perhaps use MIME Types.
 
